# RootStream

./: .clang-format  .clang-tidy  .gitignore  ANALYSIS_DOCS_README.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_SESSION_SUMMARY.md  LICENSE  Makefile  PHASE21_SUMMARY.md  PHASE23_SUMMARY.md  PHASE24.2_IMPLEMENTATION_SUMMARY.md  PHASE24.3_INDEX.md  PHASE25_SUMMARY.md  PHASE26.1_PROGRESS.md  PHASE26.3_INTEGRATION_GUIDE.md  PHASE26_QUICKSTART.md  PHASE26_STATUS.md  PHASE27.3_COMPLETION_SUMMARY.md  PHASE27.3_FINAL_REPORT.md  PHASE27.4_COMPLETION_SUMMARY.md  PHASE30_SECURITY_SUMMARY.md  PHASE31_2_COMPLETION.md  PHASE31_2_PROGRESS.md  PHASE31_3_COMPLETION.md  PHASE31_5_PROGRESS.md  PHASE31_COMPLETE_FINAL.md  PHASE31_MICROTASK_PROGRESS.md  PHASE31_MICROTASK_SUMMARY.md  PHASE31_STATUS.md  PKGBUILD  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  install.sh  rootstream  (+5 more)
.github/: pull_request_template.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rstr-player  test_crypto  test_encoding  test_packet
android/: README.md  SECURITY_FIX_PROTOBUF.md
android/RootStream/app/src/main/cpp/: CMakeLists.txt  gles_utils.cpp  opus_decoder.cpp  vulkan_renderer.cpp
clients/kde-plasma-client/: .gitignore  CMakeLists.txt  Makefile.test  README.md  STATUS.txt  test_audio_playback.c  test_vulkan_basic.c
clients/kde-plasma-client/docs/: API_BINDINGS.md  BUILDING.md  DEVELOPER_GUIDE.md  PHASE11_FINAL_STATUS.md  PHASE11_IMPLEMENTATION_SUMMARY.md  PHASE12_IMPLEMENTATION_SUMMARY.md  PHASE14_AUDIOPLAYER.md  PHASE16_FINAL_SUMMARY.md  PHASE16_IMPLEMENTATION_SUMMARY.md  PROTON_SUPPORT.md  SCREENSHOTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  color_space_conversion.md  renderer_architecture_diagram.md  renderer_integration_guide.md
clients/kde-plasma-client/packaging/: PKGBUILD  rootstream-kde-client.desktop  rootstream-kde-client.service
clients/kde-plasma-client/qml/: InputOverlay.qml  PeerSelectionView.qml  SettingsView.qml  StatusBar.qml  StreamView.qml  main.qml  qml.qrc
clients/kde-plasma-client/src/: audioplayer.cpp  audioplayer.h  connectiondialog.cpp  connectiondialog.h  frame_ring_buffer.c  frame_ring_buffer.h  inputmanager.cpp  inputmanager.h  logmanager.cpp  logmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  peermanager.cpp  peermanager.h  recording_manager_wrapper.cpp  recording_manager_wrapper.h  rootstreamclient.cpp  rootstreamclient.h  settingsmanager.cpp  settingsmanager.h  stream_backend_connector.cpp  stream_backend_connector.h  videorenderer.cpp  videorenderer.h
clients/kde-plasma-client/src/audio/: audio_backend_selector.cpp  audio_backend_selector.h  audio_player.cpp  audio_player.h  audio_resampler.cpp  audio_resampler.h  audio_ring_buffer.cpp  audio_ring_buffer.h  audio_sync.cpp  audio_sync.h  opus_decoder.cpp  opus_decoder.h  playback_alsa.cpp  playback_alsa.h  playback_pipewire.cpp  playback_pipewire.h  playback_pulseaudio.cpp  playback_pulseaudio.h
clients/kde-plasma-client/src/input/: client_input.h  client_input_x11.c
clients/kde-plasma-client/src/metrics/: INTEGRATION.md  README.md  alert_system.cpp  alert_system.h  cpu_monitor.c  cpu_monitor.h  frame_rate_counter.c  frame_rate_counter.h  gpu_monitor.c  gpu_monitor.h  hud_renderer.cpp  hud_renderer.h  memory_monitor.c  memory_monitor.h  metrics_manager.cpp  metrics_manager.h  metrics_types.h  performance_aggregator.cpp  performance_aggregator.h  performance_logger.cpp  performance_logger.h
clients/kde-plasma-client/src/network/: network_client.c  network_client.h
clients/kde-plasma-client/src/renderer/: README.md  README_PROTON.md  README_VULKAN.md  WaylandVulkanSurface.cpp  WaylandVulkanSurface.h  X11VulkanSurface.cpp  X11VulkanSurface.h  color_space.c  color_space.h  dxvk_interop.c  dxvk_interop.h  frame_buffer.c  frame_buffer.h  opengl_renderer.c  opengl_renderer.h  opengl_utils.c  opengl_utils.h  proton_detector.c  proton_detector.h  proton_game_db.c  proton_game_db.h  proton_renderer.c  proton_renderer.h  proton_settings.c  proton_settings.h  proton_test_demo.c  renderer.c  renderer.h  vkd3d_interop.c  vkd3d_interop.h  vulkan_headless.c  vulkan_headless.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_wayland.c  vulkan_wayland.h  vulkan_x11.c  vulkan_x11.h
clients/kde-plasma-client/src/renderer/shader/: README.md  compile_shaders.sh  fullscreen.vert  nv12_to_rgb.frag  nv12_to_rgb.glsl
clients/kde-plasma-client/tests/: CMakeLists.txt  test_metrics.cpp  test_peermanager.cpp  test_settingsmanager.cpp
clients/kde-plasma-client/tests/audio/: test_audio_components.cpp
clients/kde-plasma-client/tests/fixtures/: .gitignore  README.md  generate_test_frames.py
clients/kde-plasma-client/tests/unit/: test_proton_renderer.cpp  test_renderer.cpp  test_vulkan_renderer.cpp
tests/: .gitignore  CMakeLists.txt  test_recording_compile.sh
tests/common/: test_harness.c  test_harness.h
tests/e2e/: test_full_stream.sh
tests/integration/: integration_harness.h  test_adverse_conditions.sh  test_audio_fallback.c  test_capture_fallback.c  test_discovery_fallback.c  test_drainq_fanout.c  test_encode_fallback.c  test_flowctl_metrics.c  test_multi_client.c  test_network_fallback.c  test_sigroute_eventbus.c  test_soak.sh  test_stream.sh  test_vr_integration.c
tests/unit/: test_abr.c  test_analytics.c  test_annotation.c  test_audio_dsp.c  test_backends_audio.c  test_backends_capture.c  test_backends_encode.c  test_bufpool.c  test_bwprobe.c  test_caption.c  test_chunk.c  test_clocksync.c  test_congestion.c  test_container_formats.cpp  test_crypto.c  test_diagnostics.c  test_discovery_cache.c  test_disk_manager.cpp  test_drainq.c  test_encoder_integration.cpp  test_encoding.c  test_eventbus.c  test_eventlog.c  test_fanout.c  test_feature_detection.c  test_fec.c  test_flowctl.c  test_framerate.c  test_frc.c  test_gop.c  test_health.c  test_hls.c  test_hotreload.c  test_input_manager.c  test_jitter.c  test_keyframe.c  test_ladder.c  test_loss.c  test_metadata.c  test_metrics.c  (+32 more)
tests/vulkan/: test_vulkan_integration.c
(+739 files in other folders)
